--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    steps:
     - uses: actions/checkout@v2
     - uses: ./fetch-configlet
     - name: step 1
