--- a/configlet-ci/action.yml
+++ b/configlet-ci/action.yml
@@ -8,7 +8,7 @@ branding:
 runs:
   using: "composite"
   steps: 
-  - run: ./${{ github.action_path }}/fetch-configlet
+  - run: ${{ github.action_path }}/fetch-configlet
     shell: bash
   - run: ./bin/configlet lint .
     shell: bash
