--- a/configlet-ci/action.yml
+++ b/configlet-ci/action.yml
@@ -8,6 +8,7 @@ branding:
 runs:
   using: "composite"
   steps: 
+  - run: chmod +x ${{ github.action_path }}/fetch-configlet
   - run: ${{ github.action_path }}/fetch-configlet
     shell: bash
   - run: ./bin/configlet lint .
