--- a/configlet-ci/action.yml
+++ b/configlet-ci/action.yml
@@ -8,6 +8,7 @@ branding:
 runs:
   using: "composite"
   steps:
+  - run: echo "HELLO!????"
   - run: ${{ github.action_path }}/fetch-configlet
     shell: bash
   - run: chmod +x bin/configlet
