--- a/configlet-ci/action.yml
+++ b/configlet-ci/action.yml
@@ -16,3 +16,5 @@ runs:
     shell: bash
   - run: echo "$PWD/bin" >> $GITHUB_PATH
     shell: bash
+  - run: echo "configlet version $(bin/configlet --version)"
+    shell: bash
