--- a/configlet-ci/action.yml
+++ b/configlet-ci/action.yml
@@ -4,7 +4,7 @@ author: 'Sascha Mann'
 branding:
   icon: 'download'
   color: 'purple'
-  
+
 runs:
   using: "composite"
   steps:
@@ -17,4 +17,6 @@ runs:
   - run: echo "$PWD/bin" >> $GITHUB_PATH
     shell: bash
   - run: echo "configlet version $(bin/configlet --version)"
+    shell: bash
+  - run: find . -type f -name '*.json' -printf '%f\n' -exec jq empty {} +;
     shell: bash
