--- a/configlet-ci/action.yml
+++ b/configlet-ci/action.yml
@@ -4,15 +4,11 @@ author: 'Sascha Mann'
 branding:
   icon: 'download'
   color: 'purple'
-  
+
 runs:
   using: "composite"
   steps:
-  - run: mkdir -p bin/
-    shell: bash
-  - run: ${{ github.action_path }}/fetch-configlet
-    shell: bash
-  - run: chmod +x bin/configlet
+  - run: bin/fetch-configlet
     shell: bash
   - run: echo "$PWD/bin" >> $GITHUB_PATH
     shell: bash
