Pin runners to specific version

--- a/.github/workflows/configlet.yml
+++ b/.github/workflows/configlet.yml
@@ -19,7 +19,7 @@ permissions:
 
 jobs:
   configlet:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
