--- a/.github/workflows/docker-build-push-image.yml
+++ b/.github/workflows/docker-build-push-image.yml
@@ -22,6 +22,11 @@ on:
         description: "The name of the image to deploy (default: repo name)"
         required: false
         type: string
+      platform:
+        description: "The image's platform (default: linux/amd64)"
+        default: "linux/amd64"
+        required: false
+        type: string
     secrets:
       AWS_ACCOUNT_ID:
         description: "The AWS account ID used to determine the ECR registry"
@@ -101,6 +106,7 @@ jobs:
           cache-to: type=gha,mode=max
           build-args: ${{ secrets.DOCKER_BUILD_ARGS }}
           provenance: false
+          platforms: ${{ inputs.platform }}
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@5176d81f87c23d6fc96624dfdbcd9f3830bbe445
@@ -116,6 +122,7 @@ jobs:
           cache-to: type=gha,mode=max
           build-args: ${{ secrets.DOCKER_BUILD_ARGS }}
           provenance: false
+          platforms: ${{ inputs.platform }}
 
       - name: Push to AWS ECR
         uses: docker/build-push-action@5176d81f87c23d6fc96624dfdbcd9f3830bbe445
@@ -131,3 +138,4 @@ jobs:
           cache-to: type=gha,mode=max
           build-args: ${{ secrets.DOCKER_BUILD_ARGS }}
           provenance: false
+          platforms: ${{ inputs.platform }}
